--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -43,10 +43,10 @@
                         </div>
                         <hr>
                         <div class="manage-btn">
-                            <a th:href="@{/movies}">See Movies</a>
+                            <a th:href="@{/see-all-movies}">See Movies</a>
                             <a th:href="@{/add-movie-page}">Add Movie</a>
-                            <a th:href="@{/}">Delete Movie</a>
-                            <a th:href="@{/}">Edit Movie</a>
+                            <a th:href="@{/delete-movies}">Delete Movie</a>
+                            <a th:href="@{/edit-all-movies}">Edit Movie</a>
                         </div>
                     </div>
                 </div>
