--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -670,3 +670,13 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+/*----------- SEE MOVIE PAGE ----------- */
+/*.see-movie-page-poster{*/
+    /*width: 100%;*/
+    /*height: 250px;*/
+/*}*/
+.movieName i{
+    width: 11rem;
+    height: 18rem;
+}
