--- a/src/main/resources/templates/edit-all-movies.html
+++ b/src/main/resources/templates/edit-all-movies.html
@@ -24,9 +24,11 @@
 </head>
 <body>
 <!--Insert header fragment-->
-<div th:insert="~{/fragments/header :: header}"></div>
 
-<div class="container">
+<div th:insert="~{/fragments/header :: header}"></div>
+<div class="page-container">
+
+<div class="container" style="padding-bottom: 15rem">
     <!--Section: Contact v.2-->
     <section class="mb-4">
 
@@ -77,7 +79,7 @@
 </div>
 <!--Insert footer fragment-->
 <div th:insert="~{/fragments/footer :: footer}"></div>
-
+</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
