--- a/src/main/resources/templates/edit-movie-page.html
+++ b/src/main/resources/templates/edit-movie-page.html
@@ -41,7 +41,8 @@
                     <!--Grid row-->
                     <div class="row">
 
-
+                        <input type="hidden" id="id" th:field="${movieForm.movie_id}" name="id">
+                        <input type="hidden" id="details_id" th:field="${movieForm.movieDetails.movie_details_id}" name="id">
                         <!--Grid column-->
                         <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
