--- a/src/main/resources/templates/edit-user-password.html
+++ b/src/main/resources/templates/edit-user-password.html
@@ -23,29 +23,21 @@
 <body>
 
 <div class="container">
-    <form class="text-center border border-light p-5" method="post" action="/edit-user/save" th:object="${editedUser}">
+    <form class="text-center border border-light p-5" method="post" action="/edit-user-password/save" th:object="${editedUserPass}">
         <h5 class="card-header bg-primary white-text text-center py-4" style="color:white">
-            <strong>Edit User</strong>
+            <strong>Edit User Password</strong>
         </h5>
         <br>
 
 
-        <input type="hidden" id="id" th:field="${editedUser.user_id}" name="id">
+        <input type="hidden" id="id" th:field="${editedUserPass.user_id}" name="id">
         <!-- Username -->
         <label>Username</label>
-        <input type="text" id="username" name="name" th:field="${editedUser.username}" class="form-control mb-4">
+        <span th:text="${editedUserPass.username}" class="form-control mb-4"></span>
 
-        <!-- Role -->
-        <label>Role</label>
-        <select th:field="${editedUser.role}" class="form-control mb-4">
-            <option value="ROLE_ADMIN"> ADMIN </option>
-            <option value="ROLE_USER"> USER </option>
-        </select>
-
-
-        <!-- Enabled -->
-        <label>Enabled</label>
-        <input type="checkbox" id="enabled" name="capability_3d" th:field="${editedUser.enabled}" class="form-control mb-4">
+        <!-- Password -->
+        <label>New Password</label>
+        <input type="text" id="password" name="password" th:field="${editedUserPass.password}" class="form-control mb-4">
 
         <!-- Send button -->
         <button type="submit" class="btn btn-success btn-rounded btn-block z-depth-0 my-4 waves-effect" style="font-weight: bold">Submit</button>
