Made 'Movies' Page work Added New Menus in Control Panel

--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -73,6 +73,38 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="box-part text-center">
+                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
+
+                        <div class="title">
+                            <h3>Users</h3>
+                        </div>
+                        <hr>
+                        <div class="manage-btn">
+                            <a th:href="@{/users}">See Users</a>
+                            <a th:href="@{/add-user}">Add User</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="box-part text-center">
+                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
+
+                        <div class="title">
+                            <h3>Movie Plans</h3>
+                        </div>
+                        <hr>
+                        <div class="manage-btn">
+                            <a th:href="@{/users}">See Movie Plans</a>
+                            <a th:href="@{/add-user}">Add Movie Plan</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
