--- a/src/main/resources/templates/edit-all-movies.html
+++ b/src/main/resources/templates/edit-all-movies.html
@@ -53,7 +53,7 @@
                         <td>
                             <div class="movieName" th:style="'background:url(/images/posters/' + ${movie.movieDetails.poster} + ')'">
                                 <!--<a th:href="'/movie/' + ${movie.movie_id}">-->
-                                <i class="material-icons see-movie-page-poster"></i>
+                                <i class="material-icons see-movie-page-poster edit-movie-poster"></i>
                                 <!--</a>-->
                             </div>
                         </td>
