--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -21,7 +21,7 @@
     <title>Bio Trio Cinema | Search</title>
 </head>
 <body>
-
+<div th:insert="~{/fragments/header :: header}"></div>
 <div class="container">
     <form class="text-center border border-light p-5" method="post" action="/edit-user/save" th:object="${editedUser}">
         <h5 class="card-header bg-primary white-text text-center py-4" style="color:white">
