--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -270,14 +270,14 @@ a:hover {
 
 .page-container{
     position: relative;
-    min-height: 500vh;
+    min-height: 50vh;
 }
 
 #myFooter {
     margin-top: 5vh;
     background-color: #451E3D;
     color:white;
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
     width: 100%;
 }
@@ -554,6 +554,10 @@ hr.star-dark:after {
     margin-top: 1.5rem;
 }
 
+.col-name{
+    text-align: center;
+}
+
 /*----------- EMPLOYEE PAGE ----------- */
 .employee_btn{
     margin-top: 1.5rem;
@@ -565,9 +569,9 @@ hr.star-dark:after {
 
 
 /*----------- CONTROL PANEL PAGE ----------- */
-.box{
-    padding:60px 0px;
-}
+/*.box{*/
+    /*padding:60px 0px;*/
+/*}*/
 
 .box-part{
     background:#FFF;
@@ -679,12 +683,8 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
-/*----------- SEE MOVIE PAGE ----------- */
-/*.see-movie-page-poster{*/
-    /*width: 100%;*/
-    /*height: 250px;*/
-/*}*/
-.movieName i{
+/*----------- EDIT ALL MOVIES PAGE ----------- */
+.see-movie-page-poster{
     width: 11rem;
     height: 18rem;
 }
