--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -53,7 +53,7 @@
 
 
     <div class="text-center">
-        <a href="/contact" style="border-radius: 5px;" class="btn btn-outline-warning  see-movies">Contact us</a>
+        <a href="/contact" style="border-radius: 5px;" class="btn btn-outline-warning  empty-button">Contact us</a>
     </div>
     <!--Section: Contact v.2-->
 </div>
