CRUD Movie Plan

--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -100,8 +100,8 @@
                         </div>
                         <hr>
                         <div class="manage-btn">
-                            <a th:href="@{/users}">See Movie Plans</a>
-                            <a th:href="@{/add-user}">Add Movie Plan</a>
+                            <a th:href="@{/movie-plans}">See Movie Plans</a>
+                            <a th:href="@{/add-movie-plan}">Add Movie Plan</a>
                         </div>
                     </div>
                 </div>
