--- a/src/main/resources/templates/edit-movie-page.html
+++ b/src/main/resources/templates/edit-movie-page.html
@@ -36,7 +36,7 @@
 
             <!--Grid column-->
             <div class="col-md-12 mb-md-0 mb-5">
-                <form th:action="@{'/update-movie'}" method="post" th:object="${movieForm}">
+                <form th:action="@{'/update-movie'}" method="post" th:object="${movieForm}" id="myForm">
 
                     <!--Grid row-->
                     <div class="row">
@@ -101,8 +101,8 @@
                         <!--Grid column-->
                         <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
-                                <label for="descripton" class="">Description</label>
-                                <input th:field="${movieForm.movieDetails.description}" type="text" id="descripton" name="name" class="form-control">
+                                <label for="poster" class="">Poster</label>
+                                <input th:field="${movieForm.movieDetails.poster}" type="text" id="poster" name="name" class="form-control">
                             </div>
                         </div>
                         <!--Grid column-->
@@ -123,25 +123,32 @@
                         <!--Grid column-->
 
                         <!--Grid column-->
-                        <div class="col-md-6" style="margin-bottom: 2%">
-                            <div class="md-form mb-0">
-                                <label for="poster" class="">Poster</label>
-                                <input th:field="${movieForm.movieDetails.poster}" type="text" id="poster" name="name" class="form-control">
-                            </div>
+                        <div th:switch="${movieForm.type}" class="col-md-6" style="margin-bottom: 2%">
+                            <!--<label for="checkbox">3D:</label>-->
+                            <h6>3D:</h6>
+
+                            <label th:case="false" class="switch">
+                                <input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">
+                                <span class="slider round"></span>
+                            </label>
+                            <label th:case="true" class="switch">
+                                <input type="checkbox" id="unenabled" name="a" value="3D" class="form-control mb-4 switch" checked>
+                                <span class="slider round"></span>
+                            </label>
                         </div>
                         <!--Grid column-->
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6" style="margin-bottom: 2%">
-                            <!--<label for="checkbox">3D:</label>-->
-                            <h6>3D:</h6>
 
-                            <label class="switch">
-                                <input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">
-                                <span class="slider round"></span>
-                            </label>
+                        <div class="col-md-12" style="margin-bottom: 2%">
+                            <div class="md-form mb-0">
+                                <label for="description" class="">Description</label>
+                                <!--<input th:field="*{movieForm.movieDetails.description}" type="text" id="descripton" name="name" class="form-control">-->
+                                <textarea th:field="${movieForm.movieDetails.description}" id="description" rows="5" cols="80" class="form-control" th:for="myForm"></textarea>
+                            </div>
                         </div>
+
                     </div>
 
                     <div class="text-center">
