--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -18,7 +18,7 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css" />
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Search</title>
+    <title>Bio Trio Cinema | Edit user</title>
 </head>
 <body>
 <div th:insert="~{/fragments/header :: header}"></div>
