--- a/src/main/resources/templates/add-movie-plan.html
+++ b/src/main/resources/templates/add-movie-plan.html
@@ -18,7 +18,7 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css" />
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Add User</title>
+    <title>Bio Trio Cinema | Add movie plan</title>
 </head>
 <body>
 
