--- a/src/main/resources/templates/edit-theater-room.html
+++ b/src/main/resources/templates/edit-theater-room.html
@@ -18,7 +18,7 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css" />
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Search</title>
+    <title>Bio Trio Cinema | Edit theater room</title>
 </head>
 <body>
 
