--- a/src/main/resources/templates/see-movies.html
+++ b/src/main/resources/templates/see-movies.html
@@ -20,7 +20,7 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Delete Movie</title>
+    <title>Bio Trio Cinema | See Movie</title>
 </head>
 <body>
 <!--Insert header fragment-->
