Movie Plan, Started Booking and Ticket

--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -103,6 +103,21 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="box-part text-center">
+                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
+
+                        <div class="title">
+                            <h3>Bookings</h3>
+                        </div>
+                        <hr>
+                        <div class="manage-btn">
+                            <a th:href="@{/bookings}">See Bookings</a>
+                            <a th:href="@{/add-booking}">Add Booking</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
