--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
     <div class="container container-movies">
         <!--movie-card-->
         <div class="movie-card" th:each="movie, counter: ${movies}" th:if="${counter.index}<6">
-            <div class="movie-header movieName" th:style="'background:url(/images/posters/' + ${movie.movieDetails.poster} + '); background-size: cover;'">
+            <div class="movie-header movieName" th:style="'background:url(' + ${movie.movieDetails.poster} + '); background-size: cover;'">
                 <div class="header-icon-container">
                     <a th:href="'/movie/' + ${movie.movie_id}">
                         <i class="material-icons header-icon"></i>
