--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -33,7 +33,7 @@
 
             <div class="col-md-6 align-items-center" >
                 <div class="testradu" style="text-align: center">
-                <img class="movie_img" th:src="@{${'/images/posters/' + movie.movieDetails.poster}}" title="Movie Poster" style="width: 75%"/>
+                <img class="movie_img" th:src="@{${movie.movieDetails.poster}}" title="Movie Poster" style="width: 75%"/>
                 </div>
             </div>
 
@@ -48,8 +48,8 @@
 
     <h4 class="h1-responsive font-weight-bold text-center my-4">Trailer</h4>
     <div class="row">
-        <div class="col-md-12">
-            <video class="col-md-12" th:src="@{https://www.youtube.com/watch#3Fv=TcMBFSGVi1c}" type="video/mp4"></video>
+        <div class="col-md-12" style="text-align: center;">
+            <iframe th:src="${movie.movieDetails.trailer}" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-md-12">
             <div class="movie-info">
@@ -86,12 +86,15 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            <div class="input-group date_time" id="datetimepicker2" data-target-input="nearest">
-                <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2"/>
-                <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
-                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                </div>
-            </div>
+            <form th:action="@{'/select-seats'}" method="POST">
+            <label>Select Date & Time</label>
+            <select name="movie_plan_id" class="form-control mb-4">
+                <option th:each="moviePlan: ${moviePlans}" th:value="${moviePlan.movie_plan_id}">
+                    <span th:text="${moviePlan.date_time}"></span>
+                </option>
+            </select>
+                <button type="submit">Submit</button>
+            </form>
         </div>
     </div>
 </div>
