--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -688,3 +688,18 @@ input:checked + .slider:before {
     width: 11rem;
     height: 18rem;
 }
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+    margin-bottom: 5%;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
