--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'>
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script data-search-pseudo-elements defer src="https://use.fontawesome.com/releases/latest/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7" crossorigin="anonymous"></script>
+    <script data-search-pseudo-elements defer src="https://use.fontawesome.com/releases/latest/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7"
+            crossorigin="anonymous"></script>
 
     <!-- Custom CSS File -->
-    <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
     <title>Bio Trio Cinema | Home</title>
@@ -25,80 +27,83 @@
 <div th:insert="~{/fragments/header :: header}"></div>
 
 <div class="container">
-<section class="mb-4">
-    <!--Section heading-->
-    <div class="col-md-12">
-        <h2 class="h1-responsive font-weight-bold text-center my-4" th:text="${movie.movieDetails.name}">Movie Titile</h2>
-        <div class="row">
+    <section class="mb-4">
+        <!--Section heading-->
+        <div class="col-md-12" style="margin-bottom: 5%">
+            <h2 class="h1-responsive font-weight-bold text-center my-4" th:text="${movie.movieDetails.name}">Movie Titile</h2>
+            <div class="row">
 
-            <div class="col-md-6 align-items-center" >
-                <div class="testradu" style="text-align: center">
-                <img class="movie_img" th:src="@{${movie.movieDetails.poster}}" title="Movie Poster" style="width: 75%"/>
+                <div class="col-md-6 align-items-center">
+                    <div class="testradu" style="text-align: center">
+                        <img class="movie_img" th:src="@{${movie.movieDetails.poster}}" title="Movie Poster" style="width: 75%"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-md-6">
-                <h2 class="h1-responsive font-weight-bold text-center my-4">Description</h2>
-                <!--Section description-->
-                <p class="text-center w-responsive mx-auto mb-5" th:text="${movie.movieDetails.description}">Movie Description</p>
-            </div>
+                <div class="col-md-6">
+                    <h2 class="h1-responsive font-weight-bold text-center my-4">Description</h2>
+                    <!--Section description-->
+                    <p class="text-center w-responsive mx-auto mb-5" th:text="${movie.movieDetails.description}">Movie Description</p>
+                </div>
 
+            </div>
         </div>
-    </div>
 
-    <h4 class="h1-responsive font-weight-bold text-center my-4">Trailer</h4>
-    <div class="row">
+        <h4 class="h1-responsive font-weight-bold text-center my-4">Trailer</h4>
+        <!--<div class="row" style="height: 100%">-->
         <div class="col-md-12" style="text-align: center;">
-            <iframe th:src="${movie.movieDetails.trailer}" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+            <div class="videoWrapper">
+                <iframe th:src="${movie.movieDetails.trailer}" width="100%" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
-        <div class="col-md-12">
-            <div class="movie-info">
-                <!--release date_time-->
-                <div class="info-section" style="text-align: center">
-                    <label>Release Date</label>
-                    <span th:text="${movie.movieDetails.release_date}"></span>
-                </div>
-                <!--genre-->
-                <div class="info-section">
-                    <label>Genre</label>
-                    <span th:text="${movie.movieDetails.genre}"></span>
-                </div>
-                <!--language-->
-                <div class="info-section">
-                    <label>Language</label>
-                    <span th:text="${movie.movieDetails.language}"></span>
-                </div>
-                <!--duration_minutes-->
-                <div class="info-section">
-                    <label>Duration</label>
-                    <span th:text="${movie.movieDetails.duration_minutes}"></span>
-                </div>
-                <!--type-->
-                <div class="info-section">
-                    <label>TYPE</label>
-                    <span th:text="${movie.type} ? '3D' : '2D'"></span>
+        <!--</div>-->
+        <div class="row">
+            <div class="col-md-12" style="padding-right: 10%">
+                <div class="movie-info">
+                    <!--release date_time-->
+                    <div class="info-section" style="text-align: center">
+                        <label>Release Date</label>
+                        <span th:text="${movie.movieDetails.release_date}"></span>
+                    </div>
+                    <!--genre-->
+                    <div class="info-section">
+                        <label>Genre</label>
+                        <span th:text="${movie.movieDetails.genre}"></span>
+                    </div>
+                    <!--language-->
+                    <div class="info-section">
+                        <label>Language</label>
+                        <span th:text="${movie.movieDetails.language}"></span>
+                    </div>
+                    <!--duration_minutes-->
+                    <div class="info-section">
+                        <label>Duration</label>
+                        <span th:text="${movie.movieDetails.duration_minutes}"></span>
+                    </div>
+                    <!--type-->
+                    <div class="info-section">
+                        <label>TYPE</label>
+                        <span th:text="${movie.type} ? '3D' : '2D'"></span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="form-group">
-            <form th:action="@{'/select-seats'}" method="POST">
-            <label>Select Date & Time</label>
-            <select name="movie_plan_id" class="form-control mb-4">
-                <option th:each="moviePlan: ${moviePlans}" th:value="${moviePlan.movie_plan_id}">
-                    <span th:text="${moviePlan.date_time}"></span>
-                </option>
-            </select>
-                <button type="submit">Submit</button>
-            </form>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <form th:action="@{'/select-seats'}" method="POST">
+                        <label>Select Date & Time</label>
+                        <select name="movie_plan_id" class="form-control mb-4">
+                            <option th:each="moviePlan: ${moviePlans}" th:value="${moviePlan.movie_plan_id}">
+                                <span th:text="${moviePlan.date_time}"></span>
+                            </option>
+                        </select>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-
+    </section>
 </div>
 
 <!--Insert footer fragment-->
@@ -107,7 +112,9 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
