Add movie using new/existing movie details Edited the control panel Movies page now lets you select category

--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -51,8 +51,9 @@
                         </div>
                         <hr>
                         <div class="manage-btn">
-                            <a th:href="@{/see-all-movies}">See Movies</a>
-                            <a th:href="@{/add-movie-page}">Add Movie</a>
+                            <a th:href="@{/see-all-movies}">Manage Movies</a>
+                            <a th:href="@{/add-movie-page}">Add Movie Using New Description</a>
+                            <a th:href="@{/add-movie-page-using-description}">Add Movie Using Existing Description</a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +67,7 @@
                         </div>
                         <hr>
                         <div class="manage-btn">
-                            <a th:href="@{/theater-room}">See Theater Rooms</a>
+                            <a th:href="@{/theater-room}">Manage Theater Rooms</a>
                             <a th:href="@{/add-theater-room}">Add Theater Room</a>
                         </div>
                     </div>
@@ -81,7 +82,7 @@
                         </div>
                         <hr>
                         <div class="manage-btn">
-                            <a th:href="@{/users}">See Users</a>
+                            <a th:href="@{/users}">Manage Users</a>
                             <a th:href="@{/add-user}">Add User</a>
                         </div>
                     </div>
@@ -98,7 +99,7 @@
                         </div>
                         <hr>
                         <div class="manage-btn">
-                            <a th:href="@{/movie-plans}">See Movie Plans</a>
+                            <a th:href="@{/movie-plans}">Manage Movie Plans</a>
                             <a th:href="@{/add-movie-plan}">Add Movie Plan</a>
                         </div>
                     </div>
@@ -113,7 +114,7 @@
                         </div>
                         <hr>
                         <div class="manage-btn">
-                            <a th:href="@{/bookings}">See Bookings</a>
+                            <a th:href="@{/bookings}">Manage Bookings</a>
                             <a th:href="@{/add-booking}">Add Booking</a>
                         </div>
                     </div>
