--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -25,9 +25,63 @@
 <body>
 <!--Insert header fragment-->
 <div th:insert="~{/fragments/header :: header}"></div>
+
+<nav class="navbar navbar-light navbar-expand-md bg-light justify-content-center">
+    <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
+        <ul class="navbar-nav mx-auto text-center">
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies'">All Movies</a>
+            </li>
+
+            <li class="nav-item ">
+                <a class="nav-link" th:href="'/movies/action'">Action</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/adventure'">Adventure</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/anime'">Anime</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/classics'">Classics</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/comedies'">Comedies</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/crime'">Crime</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/documentaries'">Documentaries</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/horror'">Horror</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/romance'">Romance</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/sci-fi'">Sci-Fi</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="'/movies/thriller'">Thrillers</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <!--<div class="page-container">-->
 <!-- Latest Released Movies Title and Divider -->
-<h2 class="text-center orange-text" style="margin-top: 1.5rem">All Movies</h2>
+<h2 class="text-center orange-text" style="margin-top: 1.5rem"><span th:text="${moviesGenre}"> </span> Movies</h2>
 <hr class="star-dark mb-5">
 <!--start movie container-->
 <!--style="padding-bottom: 15rem"-->
