--- a/src/main/resources/templates/see-movies.html
+++ b/src/main/resources/templates/see-movies.html
@@ -46,9 +46,27 @@
                         <th class="col-name"scope="col">Description</th>
                         <th class="col-name"scope="col">Language</th>
                         <th class="col-name"scope="col">Type</th>
-                        <th class="col-name"scope="col">
-                            <!-- Button edit -->
-                            <a th:href="'/add-movie-page/'" class= "empty-button btn add">Add</a>
+                        <th class="col-name"scope="col" colspan="2">
+
+                            <!-- Modal Add Movie -->
+
+                            <!-- Trigger/Open The Modal -->
+                            <button id="movieModalbtn" class="empty-button btn add">Add Movie</button>
+
+                            <!-- The Modal -->
+                            <div id="movieModal" class="modal">
+                                <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close" style="text-align: right">&times;</span>
+                                    <p>Would you like to add a movie using new details or using existing details?</p>
+                                    <a th:href="'/add-movie-page/'" class= "empty-button btn add">Add movie using new details</a>
+                                    <a th:href="'/add-movie-page-using-details/'" class= "empty-button btn add">Add movie using existing details</a>
+                                </div>
+
+                            </div>
+                        </th>
+                        <th>
+
                         </th>
                     </tr>
                     </thead>
@@ -101,5 +119,33 @@ dateControl.value = '2017-06-01';</script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
+
+<script>
+    // Get the modal
+    var modal = document.getElementById("movieModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("movieModalbtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal
+    btn.onclick = function() {
+        modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 </body>
 </html>
