--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -37,10 +37,9 @@
             a matter of hours to help you.</p>
 
         <div class="row contact_form">
-
             <!--Grid column-->
             <div class="col-md-9 mb-md-0 mb-5">
-                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                <form id="contact-form" name="contact-form" action="/send-contact-email" method="POST">
 
                     <!--Grid row-->
                     <div class="row">
