Stylized Login, Implemented Logout, Fixed small details

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
                 <div class="col-12 text-center">
                     <h1 class="font-weight-heavy motto">"Cinema is a matter of what's in the frame and what's out."</h1>
                     <p class="lead motto"> - Martin Scorsese</p>
-                    <button type="button" class="btn btn-outline-warning add-margin-top see-movies">See available movies</button>
+                    <a th:href="@{/movies}" class="btn btn-default add-margin-top see-movies">See available movies</a>
                 </div>
             </div>
         </div>
