--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <body>
 
 <!-- Navigation -->
@@ -15,7 +15,7 @@
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/}"><i class="fas fa-home"></i> Home</a>
                     </li>
                     <li class="nav-item">
@@ -45,6 +45,10 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/control-panel}"><i class="fas fa-cog"></i>
                             <span class="d-lg-none">Control Panel</span></a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" th:href="@{/logout}"><i class="fas fa-sign-out-alt"></i>
+                            <span class="d-lg-none">Log out</span></a>
                     </li>
                 </ul>
             </div>
