--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,33 +1,117 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'>
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+    <style>
+
+        html, body {
+            height: 100%;
+        }
+
+        /* CSS only for examples not required for centering */
+        .container {
+            height: 100%;
+        }
+
+        .form-login{
+            color: white;
+        }
+
+    </style>
 </head>
-<body>
-	<div>
-		<h5>Sign In</h5>
-		<div th:if="${param.error}">
-			<p style="color: red">UserName or PassWord is wrong. Please
-				check again!</p>
-	
-		</div>
-		<div th:if="${param.logout}">
-			<h1>Logged out.</h1>
-		</div>
-		<form th:action="@{/login}" method="post">
-			<div>
-				<label for="username">User Name: </label>
-				<input type="text" id="username" placeholder="Enter UserName" name="username"/>
-			</div>
-			<div>
-				<label for="password">Password: </label>
-				<input type="password" id="password" placeholder="Enter Password" name="password"/>
-			</div>
-			<button type="submit">Submit</button>
-		</form>
-	</div>
+<body id="loginBody" style="background-color:#641F3E;">
+<!--<div>
+    <h5>Sign In</h5>
+    <div th:if="${param.error}">
+        <p style="color: red">UserName or PassWord is wrong. Please
+            check again!</p>
+
+    </div>
+    <div th:if="${param.logout}">
+        <h1>Logged out.</h1>
+    </div>
+    <form th:action="@{/login}" method="post">
+        <div>
+            <label for="username">User Name: </label>
+            <input type="text" id="username" placeholder="Enter UserName" name="username"/>
+        </div>
+        <div>
+            <label for="password">Password: </label>
+            <input type="password" id="password" placeholder="Enter Password" name="password"/>
+        </div>
+        <button type="submit">Submit</button>
+    </form>
+    </div>-->
+
+<div class="container">
+    <div class="row h-100">
+        <div class="col my-auto">
+            <div class="mx-auto">
+
+                <form id="login-form" class="form-login" th:action="@{/login}" method="post">
+                    <div class="text-center" th:if="${param.logout}">
+                        <h5>Logged out.</h5>
+                    </div>
+                    <div class="text-center" th:if="${param.error}">
+                        <h5>Username or Password is wrong. Please check again!</h5>
+                    </div>
+                    <h3 class="text-center">BioTrio Control Panel</h3>
+                    <div class="form-group">
+                        <label for="username">Username:</label><br>
+                        <input type="text" name="username" id="username" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label><br>
+                        <input type="text" name="password" id="password" class="form-control">
+                    </div>
+                    <div class="form-group text-center">
+                        <input type="submit" name="submit" class="btn btn-light" value="Login">
+                    </div>
+                </form>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--<div class="container h-100">
+    <div class="row h-100 justify-content-center align-items-center">
+<div id="login">
+        <div id="login-row" class="row justify-content-center align-items-center">
+            <div id="login-column" class="col-md-6">
+                <div id="login-box" class="col-md-12">
+                    <form id="login-form" class="form" action="@{/login}" method="post">
+                        <div class="text-center text-info" th:if="${param.logout}">
+                            <h1>Logged out.</h1>
+                        </div>
+                        <h3 class="text-center text-info">BioTrio Control Panel</h3>
+                        <div class="form-group">
+                            <label for="username" class="text-info">Username:</label><br>
+                            <input type="text" name="username" id="username" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="text-info">Password:</label><br>
+                            <input type="text" name="password" id="password" class="form-control">
+                        </div>
+                        <div class="form-group text-center">
+                            <input type="submit" name="submit" class="btn btn-info btn-md" value="Login">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+</div>
+    </div>
+</div>-->
 </body>
 </html>
