--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -33,7 +33,7 @@
     <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
         <ul class="navbar-nav mx-auto text-center">
             <li class="nav-item">
-                <a class="nav-link" th:href="'/movies'">All Movies</a>
+                <a class="nav-link" th:href="'/movies'">All</a>
             </li>
 
             <li class="nav-item ">
@@ -46,10 +46,6 @@
 
             <li class="nav-item">
                 <a class="nav-link" th:href="'/movies/anime'">Anime</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" th:href="'/movies/classics'">Classics</a>
             </li>
 
             <li class="nav-item">
@@ -70,7 +66,7 @@
                 <a class="nav-link" th:href="'/movies/romance'">Romance</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="'/movies/sci-fi'">Sci-Fi</a>
+                <a class="nav-link" th:href="'/movies/sci-fi'">SciFi</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="'/movies/thriller'">Thrillers</a>
